--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  margin-left: 10px;
 }
 
 .logo {
@@ -59,12 +60,16 @@
   padding: 4px 0.5rem;
   position: relative;
   cursor: pointer;
+  min-width: 80px;
+  min-height: 52px;
+  justify-content: center;
+  /* background-color: burlywood; */
 }
 
 .rightIcons {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .hamburger {
@@ -75,7 +80,7 @@
 .container {
     display: flex;
     min-height: 100vh;
-    background-color: #f3f4f6;
+    background-color: #f5f3ef;
     padding:1vh 7vw;
 }
 .mainFeed {
@@ -86,7 +91,7 @@
 .card {
     background-color: white;
     border-radius: 12px;
-    padding: 1rem;
+    padding: 0;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
 }
@@ -103,25 +108,38 @@
 }
 
 .profileImage {
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    display: block;
+    width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 5px solid white;
+  margin-top: -35px;
+  display: block;
+  margin-left: 10px;
+  margin-right: auto;
    
+}
+.bgImage{
+    width: 100%;
+  height: 90px;
+  object-fit: cover;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
 
 .profileName {
     font-weight: 600;
     margin-top: 8px;
     font-size: 18px;
+    padding-left: 1rem;
 }
 
 .profileDescription {
     font-size: 14px;
     color: #4b5563;
     margin-top: 4px;
+    padding: 1rem;
 }
-
+.analyticsCard{padding: 1rem;}
 .analyticsCard p {
   font-size: 14px;
   color: #333;
