Added hooks i.e. useeffect, useRef, useCalback, useContext

--- a/components/CreatePost/createPost.module.css
+++ b/components/CreatePost/createPost.module.css
@@ -9,7 +9,7 @@
 .postInput {
     width: 100%;
     padding: 10px;
-    border: 1px solid gray;
+    border: 1px solid rgb(160, 157, 157);
     border-radius: 30px;
     font-size: 16px;
     line-height: 2;
